--- a/lab-python-data-structures.ipynb
+++ b/lab-python-data-structures.ipynb
@@ -50,11 +50,184 @@
     "\n",
     "Solve the exercise by implementing the steps using the Python concepts of lists, dictionaries, sets, and basic input/output operations. "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'t-shirt': 2, 'mug': 2, 'book': 2, 'keychain': 2}\n"
+     ]
+    }
+   ],
+   "source": [
+    "products = [\"t-shirt\", \"mug\", \"book\", \"keychain\"]\n",
+    "inventory = {}\n",
+    "inv_t_shirt = int(input(\"Add quantity of T-shirts in inventory: \"))\n",
+    "inventory[\"t-shirt\"]=inv_t_shirt\n",
+    "inv_mug = int(input(\"Add quantity of mugs in inventory: \"))\n",
+    "inventory[\"mug\"]=inv_mug\n",
+    "inv_book = int(input(\"Add quantity of books in inventory: \"))\n",
+    "inventory[\"book\"]=inv_book\n",
+    "inv_keychain = int(input(\"Add quantity of keychains in inventory: \"))\n",
+    "inventory[\"keychain\"]=inv_keychain\n",
+    "print(inventory)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'mug', 't-shirt', 'book'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "customer_order = set()\n",
+    "first_order = input(\"Please, add the first order from inventory products: \")\n",
+    "customer_order.add(first_order)\n",
+    "second_order = input(\"Please, add the second order from inventory products: \")\n",
+    "customer_order.add(second_order)\n",
+    "third_order = input(\"Please, add the third order from inventory products: \")\n",
+    "customer_order.add(third_order)\n",
+    "print(customer_order)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Total_products_ord = len(customer_order)\n",
+    "\n",
+    "Total_products_ord"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "75.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "Percentage = len(customer_order) / len(inventory) * 100\n",
+    "print(Percentage)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('3', '75.0')\n"
+     ]
+    }
+   ],
+   "source": [
+    "order_status = ()\n",
+    "order_status = order_status + (\"3\", \"75.0\")\n",
+    "print(order_status)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Order statistics:\n",
+      "Total Products Ordered: 3\n",
+      "Percentage of Products Ordered: 75.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"Order statistics:\\nTotal Products Ordered: {Total_products_ord}\\nPercentage of Products Ordered: {Percentage}\")\n",
+    "#en un principio había hecho 3 líneas de print, pero me apetecía saber de que manera podía saltar de línea el texto escrito."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'t-shirt': 1, 'mug': 1, 'book': 1, 'keychain': 2}\n"
+     ]
+    }
+   ],
+   "source": [
+    "inventory[\"book\"] -= 1\n",
+    "inventory[\"t-shirt\"]-= 1\n",
+    "inventory[\"mug\"]-= 1\n",
+    "print(inventory)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "t-shirt:  1\n",
+      "mug:  1\n",
+      "book:  1\n",
+      "keychain:  2\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"t-shirt: \", inventory[\"book\"])\n",
+    "print(\"mug: \", inventory[\"mug\"])\n",
+    "print(\"book: \", inventory[\"book\"])\n",
+    "print(\"keychain: \", inventory[\"keychain\"])"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -68,7 +241,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.13.9"
   }
  },
  "nbformat": 4,
