--- a/lab-python-data-structures.ipynb
+++ b/lab-python-data-structures.ipynb
@@ -53,19 +53,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'t-shirt': 2, 'mug': 2, 'book': 2, 'keychain': 2}\n"
+      "{'t-shirt': 2, 'mug': 2, 'book': 2, 'hat': 2, 'keychain': 2}\n"
      ]
     }
    ],
    "source": [
-    "products = [\"t-shirt\", \"mug\", \"book\", \"keychain\"]\n",
+    "products = [\"t-shirt\", \"mug\", \"book\", \"hat\", \"keychain\"]\n",
     "inventory = {}\n",
     "inv_t_shirt = int(input(\"Add quantity of T-shirts in inventory: \"))\n",
     "inventory[\"t-shirt\"]=inv_t_shirt\n",
@@ -73,6 +73,8 @@
     "inventory[\"mug\"]=inv_mug\n",
     "inv_book = int(input(\"Add quantity of books in inventory: \"))\n",
     "inventory[\"book\"]=inv_book\n",
+    "inv_hat = int(input(\"Add quantity of hats in inventory: \"))\n",
+    "inventory[\"hat\"]=inv_hat\n",
     "inv_keychain = int(input(\"Add quantity of keychains in inventory: \"))\n",
     "inventory[\"keychain\"]=inv_keychain\n",
     "print(inventory)"
@@ -80,14 +82,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'mug', 't-shirt', 'book'}\n"
+      "{'t-shirt', 'book', 'mug'}\n"
      ]
     }
    ],
@@ -104,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -113,7 +115,7 @@
        "3"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -126,14 +128,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "75.0\n"
+      "60.0\n"
      ]
     }
    ],
@@ -144,26 +146,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('3', '75.0')\n"
+      "(3, 60.0)\n"
      ]
     }
    ],
    "source": [
     "order_status = ()\n",
-    "order_status = order_status + (\"3\", \"75.0\")\n",
+    "order_status = order_status + (3, 60.0)\n",
     "print(order_status)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -172,7 +174,7 @@
      "text": [
       "Order statistics:\n",
       "Total Products Ordered: 3\n",
-      "Percentage of Products Ordered: 75.0\n"
+      "Percentage of Products Ordered: 60.0\n"
      ]
     }
    ],
@@ -183,14 +185,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'t-shirt': 1, 'mug': 1, 'book': 1, 'keychain': 2}\n"
+      "{'t-shirt': 1, 'mug': 1, 'book': 1, 'hat': 2, 'keychain': 2}\n"
      ]
     }
    ],
@@ -203,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -213,14 +215,16 @@
       "t-shirt:  1\n",
       "mug:  1\n",
       "book:  1\n",
+      "hat:  2\n",
       "keychain:  2\n"
      ]
     }
    ],
    "source": [
-    "print(\"t-shirt: \", inventory[\"book\"])\n",
+    "print(\"t-shirt: \", inventory[\"t-shirt\"])\n",
     "print(\"mug: \", inventory[\"mug\"])\n",
     "print(\"book: \", inventory[\"book\"])\n",
+    "print(\"hat: \", inventory[\"hat\"])\n",
     "print(\"keychain: \", inventory[\"keychain\"])"
    ]
   }
